- fix mask not show on ios 15

--- a/styles.css
+++ b/styles.css
@@ -3,33 +3,42 @@ body {
     background-color: silver;
     overflow: hidden;
   }
-  #WebARRocksFaceCanvas, #threeCanvas {
-    position: fixed;
-    width: 100vw;
-    top: 0;
-    left: 0;
 
-    /* mirror the canvas: */
-    transform: rotateY(180deg);
-  }
-
-  #WebARRocksFaceCanvas {
-    z-index: 0;
-    display: none;
-  }
-  #threeCanvas {
-    z-index: 1;
-  }
-
-  video{
-    z-index: 2;
+  
+  #videoContainer {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
+  }
+
+  #video {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     object-fit: cover;
-    z-index: -1;
+    opacity: 0.99;
+    transform: scale(-1, 1)  translate3d(0,0,-2px) translateZ(-2px);
+    -webkit-transform: scale(-1, 1)  translate3d(0,0,-2px)  translateZ(-2px);
+  }
+
+  #WebARRocksFaceCanvas, #threeCanvas {
+    position: absolute;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    transform: translate3d(0,0,0px) translateZ(0px) rotateY(180deg);
+    z-index: 2;
+    -webkit-transform: translate3d(0,0,0px) translateZ(0px) rotateY(180deg);
+  }
+
+  #WebARRocksFaceCanvas {
+    display: none;
   }
 
   #controls {
